date modifications for search

--- a/_posts/2022-07-20-test-post.md
+++ b/_posts/2022-07-20-test-post.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 author: Chris Anderson
-title: How to do pushups
-tags: technology
-subtitle: Get buff!
+title: How to do pullups
+tags: fitness
+subtitle: This will be how you get buff and can do a massive amount of pushups and be ripped all day.
 cover-img: /assets/img/blog_2.png
 thumbnail-img: /assets/img/09.jpg
 share-img: /assets/img/path.jpg
